syntax = "proto3";

package banned_service.v1;

option go_package = "v1";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

service Silent {
    
    /** 获取禁言
     * 
     */   
    rpc get_room_silent (SilentGetRoomSilentReq) returns (SilentGetRoomSilentResp);
}



message SilentGetRoomSilentReq {
    // 
    int64 room_id = 1 [(gogoproto.jsontag) = "room_id"];
}

message SilentGetRoomSilentResp {
    // 
    int64 code = 1 [(gogoproto.jsontag) = "code"];
    // 
    string msg = 2 [(gogoproto.jsontag) = "msg"];
    // 
    Data data = 3 [(gogoproto.jsontag) = "data"];
       
    message Data {
        // level等级 medal粉丝勋章等级 member全部
        string type = 1 [(gogoproto.jsontag) = "type"];
        // 等级type=level时为用户等级要求 type为medal为粉丝勋章等级要求 type为member时1表示开启，0表示未开启
        int64 level = 2 [(gogoproto.jsontag) = "level"];
        // 还剩多少秒时间到期, -1表示直到直播结束都不过期
        int64 second = 3 [(gogoproto.jsontag) = "second"];
    }
}